--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>Orion Interface</title>
+    <title>Orion Staking</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
